--- a/package.json
+++ b/package.json
@@ -1,21 +1,56 @@
 {
-  "name": "client",
+  "name": "expo-test",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "devtools": "react-devtools"
   },
   "dependencies": {
+    "@expo-google-fonts/cormorant-garamond": "^0.2.2",
+    "@expo-google-fonts/lora": "^0.2.2",
+    "@expo-google-fonts/roboto": "^0.2.2",
+    "@expo/webpack-config": "^0.17.0",
+    "@react-native-community/datetimepicker": "^6.2.0",
+    "@react-navigation/bottom-tabs": "^6.3.3",
+    "@react-navigation/material-bottom-tabs": "^6.2.3",
+    "@react-navigation/native": "^6.0.12",
+    "@react-navigation/native-stack": "^6.8.0",
+    "deprecated-react-native-prop-types": "^2.3.0",
     "expo": "~46.0.9",
+    "expo-auth-session": "^3.7.1",
+    "expo-font": "^10.2.0",
+    "expo-linear-gradient": "^11.4.0",
+    "expo-random": "^12.3.0",
+    "expo-secure-store": "^11.3.0",
+    "expo-splash-screen": "^0.16.2",
     "expo-status-bar": "~1.4.0",
+    "expo-web-browser": "^11.0.0",
+    "firebase": "^9.9.4",
+    "install": "^0.13.0",
+    "npm": "^8.19.1",
+    "patch-package": "^6.4.7",
     "react": "18.0.0",
-    "react-native": "0.69.5"
+    "react-dom": "18.0.0",
+    "react-native": "0.69.5",
+    "react-native-paper": "^4.12.4",
+    "react-native-safe-area-context": "^4.3.1",
+    "react-native-screens": "~3.15.0",
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-svg": "^12.3.0",
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-web": "~0.18.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "babel-plugin-inline-react-svg": "^2.0.1",
+    "react-devtools": "^4.25.0"
   },
-  "private": true
+  "private": true,
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
