--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "devtools": "react-devtools"
+    "devtools": "react-devtools",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@expo-google-fonts/cormorant-garamond": "^0.2.2",
