Add button to choose photos from library

--- a/app.json
+++ b/app.json
@@ -30,6 +30,14 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "plugins": [
+      [
+        "expo-image-picker",
+        {
+          "photosPermission": "Allow Safe Travels to access your photos"
+        }
+      ]
+    ]
   }
 }
