--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo": "~46.0.9",
     "expo-auth-session": "^3.7.1",
     "expo-font": "^10.2.0",
+    "expo-image-picker": "^13.3.1",
     "expo-linear-gradient": "^11.4.0",
     "expo-random": "^12.3.0",
     "expo-secure-store": "^11.3.0",
