--- a/client/package.json
+++ b/client/package.json
@@ -38,6 +38,7 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.5",
+    "react-native-dotenv": "^3.3.1",
     "react-native-paper": "^4.12.4",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "~3.15.0",
