--- a/client/app.json
+++ b/client/app.json
@@ -6,7 +6,7 @@
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
-    "userInterfaceStyle": "light",
+    "userInterfaceStyle": "automatic",
     "scheme": "safetravels",
     "splash": {
       "image": "./assets/splash.png",
