--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,7 @@
     "@expo-google-fonts/lora": "^0.2.2",
     "@expo-google-fonts/roboto": "^0.2.2",
     "@expo/webpack-config": "^0.17.0",
-    "@react-native-community/datetimepicker": "^6.2.0",
+    "@react-native-community/datetimepicker": "6.2.0",
     "@react-navigation/bottom-tabs": "^6.3.3",
     "@react-navigation/material-bottom-tabs": "^6.2.3",
     "@react-navigation/native": "^6.0.12",
@@ -33,13 +33,17 @@
     "expo-web-browser": "^11.0.0",
     "firebase": "^9.9.4",
     "install": "^0.13.0",
+    "moti": "^0.18.0",
     "npm": "^8.19.1",
     "patch-package": "^6.4.7",
     "react": "18.0.0",
     "react-dom": "18.0.0",
+    "react-moment": "^1.1.2",
     "react-native": "0.69.5",
     "react-native-dotenv": "^3.3.1",
+    "react-native-modal-datetime-picker": "^14.0.0",
     "react-native-paper": "^4.12.4",
+    "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-snap-carousel": "^3.9.1",
